--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   LAMBDA_FUNCTION_NAME: TestFunction
   AWS_REGION: ap-southeast-2
@@ -36,11 +40,11 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-2
-          role-to-assume: ${{ secrets.LAMBDA_ROLE_ARN }}
-          role-session-name: GitHubActionsLambdaDeployment
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+        role-to-assume: ${{ secrets.LAMBDA_ROLE_ARN }}
+        role-session-name: GitHubActionsLambdaDeployment
 
       - name: Zip Lambda function
         run: |
@@ -62,7 +66,7 @@ jobs:
             echo "Creating Lambda function..."
             aws lambda create-function --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
               --runtime python3.13 \
-              --role ${{ env.LAMBDA_ROLE_ARN }} \
+              --role ${{ secrets.LAMBDA_ROLE_ARN }} \
               --handler lambda_function.lambda_handler \
               --zip-file fileb://lambda_function.zip
           else
