--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -28,4 +28,4 @@ applications:
               value: "1; mode=block"
             - key: Referrer-Policy
               value: "no-referrer"
-    appRoot: frontend
+      appRoot: frontend  # 将 appRoot 移到 frontend 配置内
